--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -193,3 +193,20 @@ mat-form-field {
 .iconTypeLabel {
     margin-bottom: 10px;
 }
+
+.spinner {
+    margin: 15px auto;
+}
+
+.section {
+    margin: 15px 0;
+    min-height: 80px;
+}
+
+.saveButton {
+    margin-top: 20px;
+}
+
+.mat-divider-horizontal {
+    position: static !important;
+}
