--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,116 +1,118 @@
-<mat-card class="options">
-  <mat-card-content>
-    <div class="search-box">
-      <mat-form-field>
-        <input matInput #searchInput placeholder="Enter a PSN ID" autocomplete="off"
-          (keydown.enter)="search(searchInput.value)">
-      </mat-form-field>
-      <div *ngIf="error">
-        User does not exist. Try updating your profile on
-        <a target="_blank" [href]="'https://psnprofiles.com/' + this.userId">PSNProfiles</a>.
+<div class="totalPage">
+  <mat-card class="options">
+    <mat-card-content>
+      <div class="search-box">
+        <mat-form-field>
+          <input matInput #searchInput placeholder="Enter a PSN ID" autocomplete="off"
+            (keydown.enter)="search(searchInput.value)">
+        </mat-form-field>
+        <div *ngIf="error">
+          User does not exist. Try updating your profile on
+          <a target="_blank" [href]="'https://psnprofiles.com/' + this.userId">PSNProfiles</a>.
+        </div>
+        <ng-container *ngIf="user">
+          <mat-divider></mat-divider>
+          <section class="section">
+            <h2>Icon Type</h2>
+            <mat-radio-group aria-label="Icon Type" [(ngModel)]="iconType">
+              <mat-radio-button value="trophy">Trophy</mat-radio-button>
+              <mat-radio-button value="game">Game</mat-radio-button>
+            </mat-radio-group>
+          </section>
+          <mat-divider></mat-divider>
+          <section class="section">
+            <h2>Icon Size</h2>
+            <mat-slider class="slider" thumbLabel min="10" max="200" step="1" value="56" [(ngModel)]="iconWidth">
+            </mat-slider>
+          </section>
+          <mat-divider></mat-divider>
+          <section class="section">
+            <h2>Sort order</h2>
+            <mat-radio-group aria-label="Sort Order" [(ngModel)]="sortOrder" (change)="sort($event)">
+              <mat-radio-button value="date">Date</mat-radio-button>
+              <mat-radio-button value="rarity">Rarity</mat-radio-button>
+              <mat-radio-button value="alpha">Alphabetical (Game)</mat-radio-button>
+            </mat-radio-group>
+          </section>
+          <mat-divider></mat-divider>
+          <section class="section">
+            <h2>Sort direction</h2>
+            <mat-radio-group aria-label="Sort Direction" [(ngModel)]="sortDirection" (change)="sort($event)">
+              <mat-radio-button value="asc">Ascending</mat-radio-button>
+              <mat-radio-button value="des">Descending</mat-radio-button>
+            </mat-radio-group>
+          </section>
+          <mat-divider></mat-divider>
+          <section class="section">
+            <h2>Display Options</h2>
+            <mat-checkbox class="example-margin" [(ngModel)]="displayUserInfo">User Info</mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="displayTrophyCounts" [disabled]="!displayUserInfo">Trophy
+              Counts
+            </mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="displayGameTitle">Game Title</mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="displayTrophyTitle">Trophy Title</mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="displayRarity">Rarity</mat-checkbox>
+          </section>
+          <mat-divider></mat-divider>
+          <button class="saveButton" mat-raised-button color="primary" (click)="this.save()">Save as PNG</button>
+        </ng-container>
       </div>
-      <ng-container *ngIf="user">
-        <mat-divider></mat-divider>
-        <section class="section">
-          <h2>Icon Type</h2>
-          <mat-radio-group aria-label="Icon Type" [(ngModel)]="iconType">
-            <mat-radio-button value="trophy">Trophy</mat-radio-button>
-            <mat-radio-button value="game">Game</mat-radio-button>
-          </mat-radio-group>
-        </section>
-        <mat-divider></mat-divider>
-        <section class="section">
-          <h2>Icon Size</h2>
-          <mat-slider class="slider" thumbLabel min="10" max="200" step="1" value="56" [(ngModel)]="iconWidth">
-          </mat-slider>
-        </section>
-        <mat-divider></mat-divider>
-        <section class="section">
-          <h2>Sort order</h2>
-          <mat-radio-group aria-label="Sort Order" [(ngModel)]="sortOrder" (change)="sort($event)">
-            <mat-radio-button value="date">Date</mat-radio-button>
-            <mat-radio-button value="rarity">Rarity</mat-radio-button>
-            <mat-radio-button value="alpha">Alphabetical (Game)</mat-radio-button>
-          </mat-radio-group>
-        </section>
-        <mat-divider></mat-divider>
-        <section class="section">
-          <h2>Sort direction</h2>
-          <mat-radio-group aria-label="Sort Direction" [(ngModel)]="sortDirection" (change)="sort($event)">
-            <mat-radio-button value="asc">Ascending</mat-radio-button>
-            <mat-radio-button value="des">Descending</mat-radio-button>
-          </mat-radio-group>
-        </section>
-        <mat-divider></mat-divider>
-        <section class="section">
-          <h2>Display Options</h2>
-          <mat-checkbox class="example-margin" [(ngModel)]="displayUserInfo">User Info</mat-checkbox>
-          <mat-checkbox class="example-margin" [(ngModel)]="displayTrophyCounts" [disabled]="!displayUserInfo">Trophy
-            Counts
-          </mat-checkbox>
-          <mat-checkbox class="example-margin" [(ngModel)]="displayGameTitle">Game Title</mat-checkbox>
-          <mat-checkbox class="example-margin" [(ngModel)]="displayTrophyTitle">Trophy Title</mat-checkbox>
-          <mat-checkbox class="example-margin" [(ngModel)]="displayRarity">Rarity</mat-checkbox>
-        </section>
-        <mat-divider></mat-divider>
-        <button class="saveButton" mat-raised-button color="primary" (click)="this.save()">Save as PNG</button>
-      </ng-container>
-    </div>
-  </mat-card-content>
-</mat-card>
+    </mat-card-content>
+  </mat-card>
 
-<div *ngIf="user" id="capture" class="outerContainer">
-  <div class="upperContainer" *ngIf="displayUserInfo">
-    <div class="userInfo">
-      <div class="userIdContainer">
-        <img class="avatar" [src]="user.avatar">
-        <span class="userId">{{user.id}}</span>
-      </div>
-      <div class="totalStats">
-        <div class="levelContainer">
-          <div class="levelUpperContainer">
-            <img class="levelImage" [src]="getLevelImage()">
-            <div class="levelNum">{{user.level}}</div>
+  <div *ngIf="user" id="capture" class="outerContainer">
+    <div class="upperContainer" *ngIf="displayUserInfo">
+      <div class="userInfo">
+        <div class="userIdContainer">
+          <img class="avatar" [src]="user.avatar">
+          <span class="userId">{{user.id}}</span>
+        </div>
+        <div class="totalStats">
+          <div class="levelContainer">
+            <div class="levelUpperContainer">
+              <img class="levelImage" [src]="getLevelImage()">
+              <div class="levelNum">{{user.level}}</div>
+            </div>
+            <div class="progressBarBase">
+            </div>
+            <div class="progressBar" [style.width.%]="user.levelProgress">
+            </div>
           </div>
-          <div class="progressBarBase">
-          </div>
-          <div class="progressBar" [style.width.%]="user.levelProgress">
+          <div class="totalCountContainer" *ngIf="displayTrophyCounts">
+            <div class="totalCountNum">{{user.getTotalCount()}}</div>
+            <div class="totalCountLabel">Total</div>
           </div>
         </div>
-        <div class="totalCountContainer" *ngIf="displayTrophyCounts">
-          <div class="totalCountNum">{{user.getTotalCount()}}</div>
-          <div class="totalCountLabel">Total</div>
+      </div>
+      <div class="divider" *ngIf="displayTrophyCounts"></div>
+      <div class="trophyCountsContainer" *ngIf="displayTrophyCounts">
+        <div class="trophyCount">
+          <img class="trophyImage" src="assets/images/platinum.png">
+          <div class="trophyCountNum">{{user.platinumCount}}</div>
+        </div>
+        <div class="trophyCount">
+          <img class="trophyImage" src="assets/images/gold.png">
+          <div class="trophyCountNum">{{user.goldCount}}</div>
+        </div>
+        <div class="trophyCount">
+          <img class="trophyImage" src="assets/images/silver.png">
+          <div class="trophyCountNum">{{user.silverCount}}</div>
+        </div>
+        <div class="trophyCount">
+          <img class="trophyImage" src="assets/images/bronze.png">
+          <div class="trophyCountNum">{{user.bronzeCount}}</div>
         </div>
       </div>
     </div>
-    <div class="divider" *ngIf="displayTrophyCounts"></div>
-    <div class="trophyCountsContainer" *ngIf="displayTrophyCounts">
-      <div class="trophyCount">
-        <img class="trophyImage" src="assets/images/platinum.png">
-        <div class="trophyCountNum">{{user.platinumCount}}</div>
-      </div>
-      <div class="trophyCount">
-        <img class="trophyImage" src="assets/images/gold.png">
-        <div class="trophyCountNum">{{user.goldCount}}</div>
-      </div>
-      <div class="trophyCount">
-        <img class="trophyImage" src="assets/images/silver.png">
-        <div class="trophyCountNum">{{user.silverCount}}</div>
-      </div>
-      <div class="trophyCount">
-        <img class="trophyImage" src="assets/images/bronze.png">
-        <div class="trophyCountNum">{{user.bronzeCount}}</div>
-      </div>
-    </div>
-  </div>
-  <div class="lowerContainer" *ngIf="platinums.length">
-    <div class="platinumGrid" [ngStyle]="{ 'grid-template-columns': getStyle() }">
-      <div class="platIconContainer" *ngFor="let plat of platinums">
-        <img [src]="iconType === 'game' ? plat.gameIcon : plat.icon" class="platinumIcon" [style.width.px]="iconWidth"
-          [title]="plat.game">
-        <div *ngIf="displayGameTitle">{{plat.game}}</div>
-        <div *ngIf="displayTrophyTitle">{{plat.name}}</div>
-        <div *ngIf="displayRarity">{{plat.rarity}}</div>
+    <div class="lowerContainer" *ngIf="platinums.length">
+      <div class="platinumGrid" [ngStyle]="{ 'grid-template-columns': getStyle() }">
+        <div class="platIconContainer" *ngFor="let plat of platinums">
+          <img [src]="iconType === 'game' ? plat.gameIcon : plat.icon" class="platinumIcon" [style.width.px]="iconWidth"
+            [title]="plat.game">
+          <div *ngIf="displayGameTitle">{{plat.game}}</div>
+          <div *ngIf="displayTrophyTitle">{{plat.name}}</div>
+          <div *ngIf="displayRarity">{{plat.rarity}}%</div>
+        </div>
       </div>
     </div>
   </div>
