--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,14 +51,13 @@
 
 .outerContainer {
     font-family: SST Light;
-    max-width: 100vw;
-    margin: 10px;
+    flex-grow: 4;
 }
 
 .trophyImage {
-    // width: 75px;
     max-height: 80px;
-    height: 8vw;
+    height: 5vw;
+    min-height: 40px;
 }
 
 .trophyCountsContainer {
@@ -76,7 +75,7 @@
 }
 
 .trophyCountNum {
-    font-size: 4vw;
+    font-size: 3vw;
     padding-left: 10px;
 }
 
@@ -116,7 +115,7 @@
 .levelImage {
     width: 30px;
     margin-right: 10px;
-    margin-top: -10px; // todo
+    margin-top: -5px; // todo
 }
 
 .levelContainer{
@@ -163,8 +162,10 @@ mat-form-field {
 }
 
 .options {
-    margin: 10px auto;
-    width: calc(100% - 50px);
+    // width: 100%;
+    flex-grow: 1;
+    flex-basis: 30%;
+    height: fit-content;
 }
 
 .example-margin {
@@ -209,4 +210,10 @@ mat-form-field {
 
 .mat-divider-horizontal {
     position: static !important;
+}
+
+.totalPage {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
 }
