--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,7 +107,9 @@
 body {
     margin: 0;
 }
-html, body { height: 100%; }
+html { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
     background-color: rgba(0,0,0,.87);
+    padding: 10px;
+    box-sizing: border-box;
 }
