--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,6 +64,21 @@
             <mat-checkbox class="example-margin" [(ngModel)]="displayRarity">Rarity</mat-checkbox>
           </section>
           <mat-divider></mat-divider>
+          <section class="section">
+            <mat-form-field appearance="fill">
+              <mat-label>Enter a date range</mat-label>
+              <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+                <input matStartDate formControlName="start" placeholder="Start date" (dateChange)="dateChanged($event)">
+                <input matEndDate formControlName="end" placeholder="End date" (dateChange)="dateChanged($event)">
+              </mat-date-range-input>
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-date-range-picker #picker></mat-date-range-picker>
+
+              <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+              <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+            </mat-form-field>
+          </section>
+          <mat-divider></mat-divider>
           <button class="saveButton" mat-raised-button color="primary" (click)="this.save()">Save as PNG</button>
         </ng-container>
       </div>
@@ -116,7 +131,7 @@
     </div>
     <div class="lowerContainer" *ngIf="user && platinums.length">
       <div class="platinumGrid" [ngStyle]="{ 'grid-template-columns': getStyle() }">
-        <div class="platIconContainer" *ngFor="let plat of platinums">
+        <div class="platIconContainer" *ngFor="let plat of currentPlats">
           <img [src]="iconType === 'game' ? plat.gameIcon : plat.icon" class="platinumIcon" [style.width.px]="iconWidth"
             [title]="plat.game">
           <div *ngIf="displayGameTitle">{{plat.game}}</div>
