date filtering title

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -204,6 +204,10 @@ mat-form-field {
     min-height: 80px;
 }
 
+.dateSection {
+    margin-bottom: 0;
+}
+
 .saveButton {
     margin-top: 20px;
 }
