--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,8 @@
             <mat-checkbox class="example-margin" [(ngModel)]="displayRarity">Rarity</mat-checkbox>
           </section>
           <mat-divider></mat-divider>
-          <section class="section">
+          <section class="section dateSection">
+            <h2>Date Filter</h2>
             <mat-form-field appearance="fill">
               <mat-label>Enter a date range</mat-label>
               <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
@@ -74,8 +75,8 @@
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-date-range-picker #picker></mat-date-range-picker>
 
-              <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-              <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+              <!-- <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error> -->
+              <!-- <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error> -->
             </mat-form-field>
           </section>
           <mat-divider></mat-divider>
