--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
           <div class="error" *ngIf="adblockError">
             An error occured. Try disabling your adblock.
           </div>
+          <div class="throttleError" *ngIf="adblockError">
+            An error occured. The server is overloaded. Try again in an hour.
+          </div>
         </section>
         <ng-container *ngIf="loading || user">
           <mat-divider></mat-divider>
