Throttle error handling bug fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
           <div class="error" *ngIf="adblockError">
             An error occured. Try disabling your adblock.
           </div>
-          <div class="throttleError" *ngIf="adblockError">
+          <div class="error" *ngIf="throttleError">
             An error occured. The server is overloaded. Try again in an hour.
           </div>
         </section>
