Refactor trophy case to own component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,144 +10,9 @@
     padding: 20px;
 }
 
-.userInfo {
-    width: 100%;
-    align-items: center;
-    display: flex;
-    flex-flow: wrap;
-}
-
-.userIdContainer {
-    align-items: center;
-    display: flex;
-}
-
-.userId {
-    font-weight: bold;
-    font-size: 25px;
-    padding-left: 20px;
-    font-family: SST Roman;
-}
-
-.totalStats {
-    flex-grow: 1;    
-    display: flex;
-    justify-content: flex-end;
-}
-
-.totalCountContainer {
-    display: flex;
-    flex-direction: column;
-}
-
-.totalCountNum {
-    font-size: 25px;
-}
-
-.totalCountLabel {
-    font-size: 12px;
-    text-align: right;
-}
-
 .outerContainer {
     font-family: SST Light;
     flex-grow: 4;
-}
-
-.trophyImage {
-    max-height: 80px;
-    height: 5vw;
-    min-height: 40px;
-}
-
-.trophyCountsContainer {
-    display: flex;
-    width: 100%;
-    margin-top: 5px;
-}
-
-.trophyCount {
-    width: 25%;
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    justify-content: center;
-}
-
-.trophyCountNum {
-    font-size: 3vw;
-    padding-left: 10px;
-}
-
-.platinumIcon {
-    border-radius: 6px;
-    box-shadow: 2px 2px 10px 0px black;
-    margin: 4px;
-}
-
-.lowerContainer {
-    padding: 20px;
-    background-color: yellow;
-    width: calc(100% - 40px);
-    background-image: linear-gradient(#072250, #051f4a);
-    text-align: center;
-}
-
-// .avatar {
-//     // width: 50px;
-// }
-
-.divider {
-    width: 100%;
-    height: 3px;
-    background-color: white;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    opacity: 0.2;
-    border-radius: 10px;
-}
-
-.platinumGrid {
-    display: grid;
-    // grid-template-columns: repeat( auto-fill, minmax(60px, 1fr) );
-}
-
-.levelImage {
-    height: 30px;
-    margin-right: 10px;
-    margin-top: -5px; // todo
-}
-
-.levelContainer{
-    display: flex;
-    flex-direction: column;
-    margin-right: 30px;
-}
-
-.progressBarBase {
-    width: 100%;
-    height: 5px;
-    margin-top: 6px;
-    background-color: white;
-    border-radius: 3px;
-    opacity: 0.3;
-}
-
-.progressBar {
-    width: 100%;
-    height: 5px;
-    margin-top: 6px;
-    background-color: white;
-    border-radius: 3px;
-    margin-top: -5px;
-}
-
-.levelNum {
-    font-size: 25px;
-}
-
-.levelUpperContainer {
-    display: flex;
 }
 
 mat-form-field {
@@ -180,13 +45,6 @@ mat-form-field {
     margin-bottom: 15px;
 }
 
-.platIconContainer {
-    display: flex;
-    flex-direction: column;
-    color: white;
-    margin: 4px 0;
-}
-
 .mat-radio-button ~ .mat-radio-button {
     margin-left: 16px;
 }
@@ -195,8 +53,9 @@ mat-form-field {
     margin-bottom: 10px;
 }
 
-.spinner {
-    margin: 15px auto;
+mat-progress-bar {
+    margin-top: -26px;
+    margin-bottom: 22px;
 }
 
 .section {
