--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
             <input matInput #searchInput placeholder="Enter a PSN ID" autocomplete="off"
               (keydown.enter)="search(searchInput.value)">
           </mat-form-field>
+          <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
           <div>Ensure your profile is up to date on
             <a target="_blank" href="https://psnprofiles.com/">PSNProfiles</a>.
           </div>
@@ -25,15 +26,16 @@
           <mat-divider></mat-divider>
           <section class="section">
             <h2>Icon Type</h2>
-            <mat-radio-group class="radioGroup" aria-label="Icon Type" [(ngModel)]="iconType">
-              <mat-radio-button class="radioButton" value="trophy">Trophy</mat-radio-button>
-              <mat-radio-button class="radioButton" value="game">Game</mat-radio-button>
+            <mat-radio-group class="radioGroup" aria-label="Icon Type" [(ngModel)]="displaySettings.iconType">
+              <mat-radio-button class="radioButton" value="TROPHY">Trophy</mat-radio-button>
+              <mat-radio-button class="radioButton" value="GAME">Game</mat-radio-button>
             </mat-radio-group>
           </section>
           <mat-divider></mat-divider>
           <section class="section">
             <h2>Icon Size</h2>
-            <mat-slider class="slider" thumbLabel min="10" max="200" step="1" value="56" [(ngModel)]="iconWidth">
+            <mat-slider class="slider" thumbLabel min="10" max="200" step="1" value="56"
+              [(ngModel)]="displaySettings.iconWidthPx">
             </mat-slider>
           </section>
           <mat-divider></mat-divider>
@@ -57,14 +59,16 @@
           <mat-divider></mat-divider>
           <section class="section">
             <h2>Display Options</h2>
-            <mat-checkbox class="example-margin" [(ngModel)]="displayUserInfo">User Info</mat-checkbox>
-            <mat-checkbox class="example-margin" [(ngModel)]="displayTrophyCounts" [disabled]="!displayUserInfo">
-              Trophy
-              Counts
+            <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayUserInfo">User Info</mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayTrophyCounts"
+              [disabled]="!displaySettings.displayUserInfo">
+              Trophy Counts
             </mat-checkbox>
-            <mat-checkbox class="example-margin" [(ngModel)]="displayGameTitle">Game Title</mat-checkbox>
-            <mat-checkbox class="example-margin" [(ngModel)]="displayTrophyTitle">Trophy Title</mat-checkbox>
-            <mat-checkbox class="example-margin" [(ngModel)]="displayRarity">Rarity</mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayGameTitle">Game Title
+            </mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayTrophyTitle">Trophy Title
+            </mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayRarity">Rarity</mat-checkbox>
           </section>
           <mat-divider></mat-divider>
           <section class="section dateSection">
@@ -83,67 +87,12 @@
             </mat-form-field>
           </section>
           <mat-divider></mat-divider>
-          <button class="saveButton" mat-raised-button color="primary" (click)="this.save()">Save as PNG</button>
+          <button class="saveButton" mat-raised-button color="primary" (click)="trophyCase.save()">Save as PNG</button>
         </ng-container>
       </div>
     </mat-card-content>
   </mat-card>
-
-  <div id="capture" class="outerContainer" *ngIf="loading || user">
-    <div class="upperContainer" *ngIf="user && displayUserInfo">
-      <div class="userInfo">
-        <div class="userIdContainer">
-          <img class="avatar" [src]="user.avatar">
-          <span class="userId">{{user.id}}</span>
-        </div>
-        <div class="totalStats">
-          <div class="levelContainer">
-            <div class="levelUpperContainer">
-              <img class="levelImage" [src]="getLevelImage()">
-              <div class="levelNum">{{user.level}}</div>
-            </div>
-            <div class="progressBarBase">
-            </div>
-            <div class="progressBar" [style.width.%]="user.levelProgress">
-            </div>
-          </div>
-          <div class="totalCountContainer" *ngIf="displayTrophyCounts">
-            <div class="totalCountNum">{{user.getTotalCount()}}</div>
-            <div class="totalCountLabel">Total</div>
-          </div>
-        </div>
-      </div>
-      <div class="divider" *ngIf="displayTrophyCounts"></div>
-      <div class="trophyCountsContainer" *ngIf="displayTrophyCounts">
-        <div class="trophyCount">
-          <img class="trophyImage" src="assets/images/platinum.png">
-          <div class="trophyCountNum">{{user.platinumCount}}</div>
-        </div>
-        <div class="trophyCount">
-          <img class="trophyImage" src="assets/images/gold.png">
-          <div class="trophyCountNum">{{user.goldCount}}</div>
-        </div>
-        <div class="trophyCount">
-          <img class="trophyImage" src="assets/images/silver.png">
-          <div class="trophyCountNum">{{user.silverCount}}</div>
-        </div>
-        <div class="trophyCount">
-          <img class="trophyImage" src="assets/images/bronze.png">
-          <div class="trophyCountNum">{{user.bronzeCount}}</div>
-        </div>
-      </div>
-    </div>
-    <div class="lowerContainer" *ngIf="user && platinums.length">
-      <div class="platinumGrid" [ngStyle]="{ 'grid-template-columns': getStyle() }">
-        <div class="platIconContainer" *ngFor="let plat of currentPlats">
-          <img [src]="iconType === 'game' ? plat.gameIcon : plat.icon" class="platinumIcon" [style.width.px]="iconWidth"
-            [title]="plat.game">
-          <div *ngIf="displayGameTitle">{{plat.game}}</div>
-          <div *ngIf="displayTrophyTitle">{{plat.name}}</div>
-          <div *ngIf="displayRarity">{{plat.rarity}}%</div>
-        </div>
-      </div>
-    </div>
-    <mat-spinner class="spinner" *ngIf="loading"></mat-spinner>
-  </div>
+  <app-trophy-case #trophyCase *ngIf="user" [platinums]="currentPlats" [user]="user"
+    [displaySettings]="displaySettings">
+  </app-trophy-case>
 </div>
