--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,12 +91,13 @@
 
           <mat-divider></mat-divider>
           <button class="saveButton" mat-raised-button color="primary" (click)="trophyCase.save()">Save as PNG</button>
+          <mat-spinner *ngIf="isSaveLoading" class="save-spinner" [diameter]="30"></mat-spinner>
         </ng-container>
       </div>
     </mat-card-content>
   </mat-card>
 
-  <app-trophy-case #trophyCase *ngIf="user" [platinums]="currentPlats" [user]="user"
-    [displaySettings]="displaySettings">
+  <app-trophy-case #trophyCase *ngIf="user" [platinums]="currentPlats" [user]="user" [displaySettings]="displaySettings"
+    (uponIsSaveLoading)="uponIsSaveLoading($event)">
   </app-trophy-case>
 </div>
