Don't show options until loaded

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
             An error occured. The server is overloaded. Try again in an hour.
           </div>
         </section>
-        <ng-container *ngIf="loading || user">
+        <ng-container *ngIf="user">
           <mat-divider></mat-divider>
           <section class="section">
             <h2>Icon Type</h2>
