--- a/src/app/trophy-case/trophy-case.component.scss
+++ b/src/app/trophy-case/trophy-case.component.scss
@@ -82,7 +82,7 @@
 .platinumIcon {
     border-radius: 6px;
     box-shadow: 2px 2px 10px 0px black;
-    margin: 4px;
+    // margin: 4px;
 }
 
 .lowerContainer {
@@ -150,7 +150,8 @@
     display: flex;
     flex-direction: column;
     color: white;
-    margin: 4px 0;
+    margin-top: 4px;
+    margin-bottom: 4px;
     align-items: center;
 }
 
