revert ps5 centering

--- a/src/app/trophy-case/trophy-case.component.scss
+++ b/src/app/trophy-case/trophy-case.component.scss
@@ -154,7 +154,7 @@
     margin-top: 4px;
     margin-bottom: 4px;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
 }
 
 .totalPage {
