--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,9 @@
             {{error}}
         </div>
         <button routerLink="/mosaic" class="action-button" mat-raised-button color="primary"
-            (click)="search(searchInput.value)">Generate
-            Mosaic</button>
+            (click)="search(searchInput.value)">Mosaic</button>
+        <button routerLink="/wrapped" class="action-button" mat-raised-button color="primary"
+            (click)="search(searchInput.value)">2020 Wrapped</button>
     </mat-card-content>
 </mat-card>
 
